# x-mlps

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
examples/: gmlp.py  mlpmixer.py  resmlp.py  s2mlp.py
examples/rfml/: README.md  datasets.py  smlp.py  split_radioml.py
examples/vision/: fnet.py  resmlp.py  s2mlp.py
requirements/: dev-requirements.in  dev-requirements.txt  jax-cpu.in  jax-cpu.txt  jax-gpu.in  jax-gpu.txt  requirements.in  requirements.txt
scripts/: sync_jax_cuda.sh
src/x_mlps/: __init__.py  _ff.py  _nn.py  _types.py  _utils.py  _version.py  _x_mlps.py
workflows/classification/imagenet1k/: train.py
