[tool.poetry]
name = "x-mlps"
version = "0.5.0"
description = "Configurable MLPs built on JAX and Haiku"
readme = "README.md"
authors = ["Miller Wilt <miller@pyriteai.com>"]
license = "MIT"
repository = "https://github.com/PyriteAI/x-mlps"
keywords = [
    "artificial intelligence",
    "machine learning",
    "jax",
    "haiku",
    "multilayer perceptron",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
dm-haiku = "^0.0.6"
einops = "^0.4.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
ipython = "^8.4.0"
isort = "^5.10.1"
jax = "0.3.13"
jaxlib = "0.3.10"
optax = "^0.1.2"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
safety = "^1.10.3"
tables = "^3.7.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
tqdm = "^4.64.0"
typer = "^0.4.1"
wheel = "^0.37.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
